# GlowTracker

./: .gitignore  Autofocus_canon_BASLER.py  BUILD.md  Basler_control.py  FunctioningImageUpdate.py  GUI_ToDos.txt  GlowTracker.py  MacroscopeGUI.bat  MacroscopeGUI.py  MacroscopeStageScripts.py  Macroscope_macros.py  README.md  StageEnvironment.yml  StageEnvironment_update.yml  Zaber_control.py  cannon_communication_protocol.py  evn2.yml  globals.py  kivy.kv  layout.kv  macroscope.ini  macroscope.kv  pyproject.toml  setup.py  simpleAcquisition.py
.github/workflows/: install_package.yml  pages.yml  publish_package.yml
SeparateFunctionsFiles/: CenterRunStage.py  HomeAxes.py  MoveAxesToStartingPositon.py  SetAxesRangeLimits.py  StageCalibration.py  TrackingStageCode.py  zAxisFocus.py
TestFunctions/: Test2.py  TestKivy.py  Test_AnimationDAQ2.py  Tests  TestsMatplotlib  compareGrabSpeed.py  kivy.kv  motiontest.py  testDualColorCalibration.py  testObjectDetection.py
docs/: .gitignore  Gemfile  Part_list.md  _config.yml  bill_of_materials.md  build_your_own.md  education.md  faq.md  getting_started.md  impressum.md  index.html  index.md  performance_benchmark.md
docs/List of parts/: List_BrightField.md  List_dualcolor.md  List_of_parts.md  List_singlecolor.md  Price.md  Tools.md  Upgrades_options  Upgrades_options.md
docs/_includes/: sorted_pages.html
docs/_includes/components/: children_nav.html
docs/_sass/custom/: custom.scss  setup.scss
docs/capabilities/: capabilities.html  capabilities.md
docs/custom_assets/images/1 - stage/: note.txt
docs/defaults/: defaults.html  defaults.md
docs/dual_color/: dual_color.md
docs/how_to_run/: how_to_run.html  how_to_run.md
docs/software/: code_explaination.md  code_explanation.md  daq_controller.md  device_setup.md  getting_started.md  known_issues.md  macro_script.md  software.md  software_installation.md  tracking_explanation.md
docs/worms_satiety/: worms_satiety.md
glowtracker/: .gitignore  AutoFocus.py  Autofocus.py  Autofocus_Model.py  Basler_control.py  DAQ_control.py  GlowTracker.py  MacroScript.py  MacroScriptExecutor.py  Macroscope_macros.py  Microscope_macros.py  README.md  StageEnvironment.yml  Zaber_control.py  __init__.py  __main__.py  glowtracker.ini  layout.kv  macroscope.ini
glowtracker/TestFunctions/: SimpleStageExample.py  TestDO.py  TestKivy.py  Test_AnimationDAQ.py  TestusingOtherFunction.py  compareFocusEstimation.py  hardware_trigger_grab.py  macro_language.py  sensor_readout_time_vs_roi.py  testCameraIO.py  testHardWareTriggerAcquisition.py  testLabJack.py  testMacroScript.txt  testObjectDetection.py  testZaberStageMovementSpeed.py
glowtracker/scripts/: 50mm.txt  move.txt
glowtracker/settings/: default.pfs  experiment_settings.json  gui_settings.json
settings/: default.pfs  experiment_settings.json  gui_settings.json
